Fixed display spacing

--- a/style.css
+++ b/style.css
@@ -79,5 +79,5 @@ p {
 .gameover{
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
-    padding-top: 18%;
+    padding-top: 14%;
 }
